apps/payments-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments-api
spec:
  replicas: 2
  selector: {matchLabels: {app: payments-api}}
  template:
    metadata:
      labels: {app: payments-api, tier: app}
    spec:
      terminationGracePeriodSeconds: 20
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels: {app: payments-api}
      containers:
        - name: payments-api
          image: ghcr.io/a4225344a/platform-service@sha256:c1e1e1dd13f83d4b6129e20ef213742e979632bbd9413c1ceea11f685110ad6b
          ports: [{containerPort: 8080}]
          resources:
            requests: {cpu: "100m", memory: "128Mi"}
            limits: {memory: "256Mi"}
          startupProbe: {httpGet: {path: /healthz, port: 8080}, failureThreshold: 10, periodSeconds: 3}
          livenessProbe: {httpGet: {path: /healthz, port: 8080}, periodSeconds: 10}
          readinessProbe: {httpGet: {path: /ready, port: 8080}, periodSeconds: 5}
---
apiVersion: v1
kind: Service
metadata:
  name: payments-api
  labels: {app: payments-api, tier: app}
spec:
  selector: {app: payments-api}
  ports: [{name: http, port: 80, targetPort: 8080}]
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: payments-route
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: platform-gateway
  rules:
    - matches: [{path: {type: PathPrefix, value: /payments}}]
      filters:
        - type: URLRewrite
          urlRewrite:
            path: {type: ReplacePrefixMatch, replacePrefixMatch: /WeatherForecast}
      backendRefs:
        - group: ""
          kind: Service
          name: payments-api
          port: 80
          weight: 1
