apps/shipping-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shipping-api
spec:
  replicas: 2
  selector: {matchLabels: {app: shipping-api}}
  template:
    metadata:
      labels: {app: shipping-api, tier: app}
    spec:
      terminationGracePeriodSeconds: 20
      containers:
        - name: shipping-api
          image: ghcr.io/a4225344a/platform-service@sha256:a84a181cb904012462a0f2fada5d3daabde9c9d1195b30a5876fa668b32ec48e
          ports: [{containerPort: 8080}]
          resources:
            requests: {cpu: "50m", memory: "128Mi"}
            limits: {cpu: "250m", memory: "256Mi"}
          startupProbe: {httpGet: {path: /healthz, port: 8080}, failureThreshold: 10, periodSeconds: 3}
          livenessProbe: {httpGet: {path: /healthz, port: 8080}, periodSeconds: 10}
          command: ["sh", "-c", "echo boom; exit 1"]
          readinessProbe: {httpGet: {path: /ready, port: 8080}, periodSeconds: 5}
---
apiVersion: v1
kind: Service
metadata:
  name: shipping-api
  labels: {app: shipping-api, tier: app}
spec:
  selector: {app: shipping-api}
  ports: [{name: http, port: 80, targetPort: 8080}]
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: shipping-route
spec:
  parentRefs: [{name: platform-gateway}]
  rules:
    - matches: [{path: {type: PathPrefix, value: /shipping}}]
      filters:
        - type: URLRewrite
          urlRewrite:
            path: {type: ReplacePrefixMatch, replacePrefixMatch: /WeatherForecast}
      backendRefs: [{name: shipping-api, port: 80}]
